changed term to component metric [#156371545]

--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -7,7 +7,7 @@ This topic describes how to add collectd to your Pivotal Cloud Foundry (PCF) dep
 
 ## <a id='about'></a>About collectd Add-on for PCF
 
-This add-on is required to enable the Altoros Heartbeat monitoring solution to consume system metrics
+This add-on is required to enable the Altoros Heartbeat monitoring solution to consume component metrics
 from the VMs that make up a PCF deployment. The [collectd](https://collectd.org/) Add-on gathers VM
 metrics from PCF platform components and any other BOSH-deployed services, such as databases,
 and makes this information available to Altoros Heartbeat over the network.
