--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,6 +5,31 @@ owner: Partners
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
+##<a id="v1.1.0"></a>v1.1.0
+
+**Release Date:** May 28, 2018
+
+New features available in this release:
+
+* Added TCP Routing monitoring (Firehose and HAProxy metrics).
+* Updated the existing dashboards and alerts for Diego.
+* Updated the existing dashboards for the Cloud Foundry components.
+* Added new dashboards for the Cloud Foundry components.
+* A new version of the collectd BOSH Add-on (v10.0.5).
+* Added a description of the drill-down feature in the documentation.
+* Added the option to disable SSL certificate verification for UAA and CC API endpoints for Grafana.
+* Truncated the dashboard names ending with "with Logs". Please, delete such dashboards, if you have any left.
+* Added support for PCF v2.0 and initial support for PCF v2.1.
+* Added OS-tuning properties.
+* Moved a nozzle to a separate VM.
+* Enabled a local cache for metrics requests.
+* Changed a formula for a replication factor and added a property to override a replication factor.
+* Made it possible to configure metrics storage schemas.
+* Updated the existing dashboards for Services.
+* Added dashboards for "MySQL for PCF v1".
+* Added Heartbeat self-alerts.
+* Performance optimizations.
+
 ##<a id="v1.0.2"></a>v1.0.2
 
 **Release Date:** October 25, 2017
