--- a/docs-content/statsd.html.md.erb
+++ b/docs-content/statsd.html.md.erb
@@ -9,7 +9,7 @@ This section is intended for app developers who are going to use the Altoros Hea
 The section describes how to enable an app to send metrics to the StatsD server.
 These metrics are subsequently pushed to Graphite's Carbon component for caching and persistence.
 
-##<a id='integration'></a> Integrating Heartbeat's StatsD into the App
+##<a id='integration'></a> Integrate Heartbeat's StatsD into the App
 
 1. Download a language-specific StatsD client library from [this Github page](https://github.com/etsy/statsd/wiki#client-implementations) and add it into your app code.
 
