--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -37,8 +37,46 @@ Follow the steps below to create a collectd manifest for your deployment:
       jobs:
       \- name: collectd
         release: collectd
-      exclude:
-        <strong>deployments</strong>: ['some-deployment-name-to-exclude']
+      include:
+        stemcell:
+        \- os: ubuntu-trusty
+      exclude: # currently BOSH uses AND for placement rules so you should use only "deployments" OR "jobs" property
+        #<strong>deployments</strong>: ['p-windows-runtime-xxx', 'p-spring-cloud-services-xxx']
+        jobs:
+        \- {name: smoke-tests, release: cf}
+        \- {name: push-apps-manager, release: push-apps-manager-release}
+        \- {name: push-usage-service, release: push-usage-service-release}
+        \- {name: deploy-notifications, release: notifications}
+        \- {name: deploy-notifications-ui, release: notifications-ui}
+        \- {name: push-pivotal-account, release: pivotal-account}
+        \- {name: deploy-autoscaling, release: cf-autoscaling}
+        \- {name: register-broker, release: cf-autoscaling}
+        \- {name: nfsbrokerpush, release: nfs-volume}
+        \- {name: bootstrap, release: cf-mysql}
+        \- {name: rejoin-unsafe, release: cf-mysql}
+        \- {name: broker-registrar, release: cf-mysql}
+        \- {name: deregister-and-purge-instances, release: cf-mysql}
+        \- {name: smoke-tests, release: cf-mysql}
+        \- {name: service-tests, release: dedicated-mysql-adapter}
+        \- {name: orphan-deployments, release: on-demand-service-broker}
+        \- {name: create-uaa-client, release: cf-heartbeat}
+        \- {name: delete-uaa-client, release: cf-heartbeat}
+        \- {name: grafana-bootstrap, release: cf-heartbeat}
+        \- {name: broker-registrar, release: cf-heartbeat}
+        \- {name: broker-deregistrar, release: cf-heartbeat}
+        \- {name: register-broker, release: on-demand-service-broker}
+        \- {name: deregister-broker, release: on-demand-service-broker}
+        \- {name: delete-all-service-instances, release: on-demand-service-broker}
+        \- {name: upgrade-all-service-instances, release: on-demand-service-broker}
+        \- {name: deploy-service-broker, release: spring-cloud-broker}
+        \- {name: register-service-broker, release: spring-cloud-broker}
+        \- {name: smoke-tests, release: spring-cloud-broker}
+        \- {name: destroy-service-broker, release: spring-cloud-broker}
+        \- {name: delete-all-service-instances-and-deregister-broker, release: on-demand-service-broker}
+        \- {name: on-demand-broker-smoke-tests, release: redis-service-adapter}
+        \- {name: install-hwc-buildpack, release: hwc-buildpack}
+        \- {name: install-hwc-buildpack, release: hwc-offline-buildpack}
+        \- {name: integration-tests, release: pcf-jmxbridge-v1.9}
       properties:
         collectd:
           <strong>graphite\_prefix</strong>: cf.collectd.
@@ -51,13 +89,16 @@ Follow the steps below to create a collectd manifest for your deployment:
 
 * `exclude: deployments`: (Optional) Specify the name of the deployment to mass exclude from the collectd Add-on coverage.
 
-    <p class="note"><strong>Note:</strong> If this functionality is not required, remove this section.</p>
+    <!--p class="note"><strong>Note:</strong> If this functionality is not required, remove this section.</p-->
+    <p class="note"><strong>Note:</strong> Currently, BOSH uses AND for placement rules, so you should use only "deployments" or "jobs" property.</p>
 
 * `releases: version`: Use the version of the collectd Add-on downloaded from Pivotal Network.
 * `collectd: graphite_prefix`: Do not change the graphite_prefix name. It must be `cf.collectd.`.
 * `collectd: graphite_servers`: If you are using Heartbeat in high availability (HA) mode, use your load balancer endpoint for collectd. For details, see [External Load Balancer configuration](ha-with-external-lb.html#lb-config).
-If you are not going to use HA mode, use the IP address of any of Altoros Heartbeat's back-ends. For details, see [Finding Back-End IPs](ha-with-external-lb.html#finding-backend-ip).
-* `collectd: interval`: You can modify the default 10-second interval value. This value specifies how often the collectd Add-on gathers metrics from VMs.
+If you are not going to use HA mode, use the IP address of any of Altoros Heartbeat's back-ends. For details, see [Find Back-End IPs](ha-with-external-lb.html#find-backend-ip).
+* `collectd: interval`: You can modify the default 10-second interval value. This value specifies how often the collectd Add-on gathers metrics from VMs. 
+  This value should correlate with the value for ["Storage schema for VM metrics"](installing.html#storage_configuration).
+  So, prior to configuring the collectd interval value, you should first configure the ["Storage schema for VM metrics"](installing.html#storage_configuration) storage schema.
 
 ## <a id='deploy'></a>Download and Deploy the collectd Add-on
 
