Update subnav for version 1.1.0

--- a/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
@@ -32,6 +32,9 @@
         <a href="/altoros-heartbeat/ha-with-external-lb.html">High Availability</a>
       </li>
       <li>
+        <a href="/altoros-heartbeat/altoros-heartbeat-scaling.html">Altoros Heartbeat Scaling and Performance Tuning</a>
+      </li>
+      <li>
         <a href="/altoros-heartbeat/altoros-heartbeat-troubleshooting.html">Altoros Heartbeat Troubleshooting</a>
       </li>
       <li>
