--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -63,7 +63,7 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>Release date</td>
-        <td>May 28, 2018</td>
+        <td>May 30, 2018</td>
     </tr>
     <tr>
         <td>Software component version</td>
@@ -74,12 +74,8 @@ The following table provides version and version-support information about Altor
         <td>v1.10.x, v1.11.x, v1.12.x, v2.0.x, and v2.1.x</td>
     </tr>
     <tr>
-        <td>Compatible Elastic Runtime version(s)</td>
-        <td>v1.10.x, v1.11.x, and v1.12.x</td>
-    </tr>
-    <tr>
         <td>Compatible Pivotal Application Services (PAS)* version(s)</td>
-        <td>v2.0.x and v2.1.x</td>
+        <td>v1.10.x, v1.11.x, and v1.12.x, v2.0.x and v2.1.x</td>
     </tr>
     <tr>
         <td>IaaS support</td>
@@ -90,7 +86,7 @@ The following table provides version and version-support information about Altor
         <td>No</td>
     </tr>
 </table>
-\* As of PCF v2.0, <em>Elastic Runtime</em> is renamed <em>Pivotal Application Service (PAS)</em>. If your tile supports PCF 2.0, it will use PAS, not Elastic Runtime.
+\* As of PCF v2.0, <em>Elastic Runtime</em> is renamed <em>Pivotal Application Service (PAS)</em>. 
 
 ## <a id="prerequisites"></a>Prerequisites
 
