--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -7,6 +7,7 @@ This documentation describes the Altoros Heartbeat for Pivotal Cloud Foundry (PC
 creates a service that enables operators and app developers to track all system and application metrics
 from their PCF installation in one place.
 
+
 ## <a id='overview'></a> Overview
 
 Altoros Heartbeat for PCF is a multi-tenant monitoring service that uses Cloud Foundry's User Account and Authentication (UAA)
@@ -50,6 +51,7 @@ Altoros Heartbeat for PCF includes the following key features:
   Dedicated shares of the solution are deployed to different spaces to collect metrics from the apps and services running within.
 * **Alerts**: Can be defined for each dashboard panel, and allow users to get immediate notifications though email, Slack, and other notification channels.
 
+
 ## <a id="snapshot"></a> Product Snapshot
 
 <p class='note'><strong>Note:</strong> As of PCF v2.0, Elastic Runtime is renamed Pivotal Application Service (PAS).</p>
@@ -89,16 +91,18 @@ The following table provides version and version-support information about Altor
     </tr>
 </table> 
 
+
 ## <a id="prerequisites"></a> Prerequisites
 
 To complete installation of Altoros Heartbeat for PCF, you need the following:
 
 * An AWS S3 bucket or WebDAV with credentials to store alert images from Grafana
-* Alert notification endpoint (e.g. SMTP server for email notifications, Slack incoming webhook url) with credentials
+* Alert notification endpoint (e.g. SMTP server for email notifications, Slack incoming webhook URL) with credentials
 * CPU, RAM, and disk resources for seven VMs
 * Internet connectivity between the networks where the PCF deployment and Heartbeat are installed.
   Altoros recommends installing Heartbeat on the same network with PCF.
 * TCP 2003 and 8126, and UDP 8125 ports open in the firewall to accept connections from PCF and services networks. Ports 2003 and 8125 are used to receive metrics. TCP 8126 is necessary for Load Balancer health checks.
+
 
 ## <a id="reqs"></a> Requirements
 
@@ -106,13 +110,13 @@ Altoros Heartbeat for PCF has the following requirements:
 
 * [Pivotal Application Service (formerly Elastic Runtime)](https://network.pivotal.io/products/elastic-runtime) v1.10.x, v1.11.x, v1.12.x, v2.0.x, and v2.1.x
 * [Ops Manager](https://network.pivotal.io/products/ops-manager) v1.10.x, v1.11.x, v1.12.x, v2.0.x, and v2.1.x
-* Installation of the collectd add-on for PCF to enable PCF component VMs and
-  the VMs of any other BOSH-deployed services expose component metrics to Heartbeat.
+* Installation of the collectd add-on for PCF to enable PCF component VMs and the VMs of any other BOSH-deployed services expose component metrics to Heartbeat.
 For more information, see [Installing collectd Add-on for PCF](installing-collectd.html).
 * (Optional) If you want to enable collection of JMX metrics from Java apps, you will need a custom Java buildpack for Altoros Heartbeat for PCF.
 For more information, see [JMXTrans Agent Integration](jmxtrans.html).
 * (Optional) If you want to enable collection of custom application metrics, you must integrate a StatsD library into the app's code.
   For more information, see [StatsD Integration](statsd.html).
+
 
 ## <a id="limitations"></a> Limitations
 
@@ -121,12 +125,14 @@ The Altoros Heartbeat for PCF tile has the following limitations:
 * Offline buildpack for collecting JMX metrics is unavailable. Only the online version of the buildpack from
   [this GitHub repository](https://github.com/Altoros/java-buildpack/tree/jmx-agent-integration) can be used to collect JMX metrics from Java apps.
 * Users are limited to using internal MariaDB to store internal Heartbeat data such as user sessions, mappings, dashboards, UI configs, etc.
-* Downscaling with retained high availability is only possible to at least two back-end instances.
+* Downscaling with retained high availability is only possible to at least two back end instances.
+
 
 ## <a id="feedback"></a> Feedback
 
 Please provide any bugs, feature requests, or questions to the
 [Pivotal Cloud Foundry Feedback](mailto:pivotal-cf-feedback@pivotal.io) list or send an email to [Altoros Customer Support](mailto:pcftiles-support@altoros.com).
+
 
 ## <a id='license'></a> Trial License
 
