--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,7 +5,7 @@ owner: Partners
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
-##<a id="v1.1.0"></a>v1.1.0
+## <a id="v1.1.0"></a> v1.1.0
 
 **Release Date:** May 30, 2018
 
@@ -15,10 +15,10 @@ New features available in this release:
 * Updated the existing dashboards and alerts for Diego.
 * Updated the existing dashboards for the Cloud Foundry components.
 * Added new dashboards for the Cloud Foundry components.
-* A new version of the collectd BOSH Add-on (v10.0.5).
+* A new version of the collectd BOSH add-on (v10.0.5).
 * Added a description of the drill-down feature in the documentation.
 * Added the option to disable SSL certificate verification for UAA and CC API endpoints for Grafana.
-* Truncated the dashboard names ending with "with Logs". Please, delete such dashboards, if you have any left.
+* Truncated the dashboard names ending with `with Logs`. Delete such dashboards, if you have any left.
 * Added support for PCF v2.0 and initial support for PCF v2.1.
 * Added OS-tuning properties.
 * Moved a nozzle to a separate VM.
@@ -30,7 +30,7 @@ New features available in this release:
 * Added Heartbeat self-alerts.
 * Performance optimizations.
 
-##<a id="v1.0.2"></a>v1.0.2
+## <a id="v1.0.2"></a> v1.0.2
 
 **Release Date:** October 25, 2017
 
@@ -41,9 +41,9 @@ Features included in this release:
 * Dashboards bootstrapping mechanism improvements
 * Inactive metrics are stored for 30 days now by default
 
-<p class="note"><strong>Note</strong>: Inactive metrics are stored for 30 days by default and will be removed after this period. If you need to store inactive metrics for a different period of time, please change the <strong>Days to keep inactive metrics</strong> parameter with the needed value on the <strong>Heartbeat Metrics Storage Configuration</strong> tab.</p>
+<p class="note"><strong>Note:</strong> Inactive metrics are stored for 30 days by default and will be removed after this period. If you need to store inactive metrics for a different period of time, please change the <strong>Days to keep inactive metrics</strong> parameter with the needed value on the <strong>Heartbeat Metrics Storage Configuration</strong> tab.</p>
 
-##<a id="v1.0.1"></a>v1.0.1
+## <a id="v1.0.1"></a> v1.0.1
 
 **Release Date:** October 6, 2017
 
@@ -54,17 +54,17 @@ Features included in this release:
 * Fixes the RabbitMQ monitoring issue
 * Adds support for syslog logs from both Metron and blackbox
 
-<p class="note"><strong>Note</strong>: The service frontend no longer requires 100&nbsp;GB of persistent disk space.
-   You can now downscale to 5&nbsp;GB </p>
+<p class="note"><strong>Note:</strong> The service frontend no longer requires 100&nbsp;GB of persistent disk space.
+   You can now downscale to 5&nbsp;GB.</p>
 
-##<a id="v1.0.0"></a>v1.0.0
+## <a id="v1.0.0"></a> v1.0.0
 
 **Release Date:** September 18, 2017
 
 Features included in this release:
 
-* Support for a High Availability mode of operation
-* Back-end and front-end VMs are separated to improve flexibility and scalability
+* Support for a high availability mode of operation
+* Back end and front end VMs are separated to improve flexibility and scalability
 * New versions of components
 * The Heartbeat URL is now `monitoring.%system-domain%`
 
@@ -73,7 +73,7 @@ Known issues in this release:
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
   To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
-##<a id="v0.8.95"></a>v0.8.95
+## <a id="v0.8.95"></a> v0.8.95
 
 **Release Date:** September 6, 2017
 
@@ -93,7 +93,7 @@ Known issues in this release:
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
   To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
-##<a id="v0.8.94"></a>v0.8.94
+## <a id="v0.8.94"></a> v0.8.94
 
 **Release Date:** August 31, 2017
 
@@ -108,7 +108,7 @@ Known issues in this release:
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
   To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
-##<a id="v0.8.93"></a>v0.8.93
+## <a id="v0.8.93"></a> v0.8.93
 
 **Release Date:** August 21, 2017
 
@@ -124,7 +124,7 @@ Known issues in this release:
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
   To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
-##<a id="v0.8.92"></a>v0.8.92
+## <a id="v0.8.92"></a> v0.8.92
 
 **Release Date:** August 16, 2017
 
@@ -144,7 +144,7 @@ Known issues in this release:
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
   To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
-##<a id="v0.8.91"></a>v0.8.91
+## <a id="v0.8.91"></a> v0.8.91
 
 **Release Date:** August 3, 2017
 
@@ -166,7 +166,7 @@ Known issues in this release:
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
   To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
-##<a id="v0.8.90"></a>v0.8.90
+## <a id="v0.8.90"></a> v0.8.90
 
 **Release Date:** July 20, 2017
 
