--- a/docs-content/statsd.html.md.erb
+++ b/docs-content/statsd.html.md.erb
@@ -62,7 +62,7 @@ For an example of an app written in golang that sends custom metrics to a Grafan
     service              plans                               description
     app-autoscaler       standard                            Scales bound applications in response to load (beta)</pre>
 
-1. Find Heartbeat in the list of the available services and select the service plan. Currently, only standard is available, so it is selected by default.
+1. Find Heartbeat in the list of the available services and select the service plan. Currently, only the standard service plan is available, so it is selected by default.
 
 1. Create a service instance.
       <pre class="terminal">cf create-service heartbeat standard heartbeat</pre>
